# neuro-state-monitor

./: .gitignore  CLAUDE.md  README.md  REQUIREMENTS.md  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
classifiers/addiction/: data.py  features.py  models.py  predict.py  train.py
classifiers/encoding/: data.py  features.py  models.py  predict.py  train.py
classifiers/tmr/: cue_delivery.py  event_detection.py  sleep_staging.py
classifiers/trauma/: data.py  features.py  models.py  train.py
data/: README.md  download_peers.py  download_uci.py
experiments/: addiction_config.yaml  base_config.yaml  encoding_config.yaml
infrastructure/: Dockerfile  docker-compose.yml  prometheus.yml
notebooks/addiction/: 01_data_exploration.ipynb  02_feature_analysis.ipynb  03_model_comparison.ipynb
notebooks/encoding/: 01_data_exploration.ipynb  02_feature_analysis.ipynb  03_model_comparison.ipynb
notebooks/explainability/: 01_model_interpretation.ipynb
notebooks/tmr/: 01_sleep_staging.ipynb  02_spindle_detection.ipynb
notebooks/trauma/: 01_fmri_exploration.ipynb
shared/: experiment.py
shared/evaluation/: cross_validation.py  explainability.py  fairness.py  metrics.py
shared/features/: connectivity.py  entropy.py  erp.py  microstate.py  spectral.py
shared/features/configs/: default.yaml
shared/monitoring/: drift.py  quality.py
shared/preprocessing/: bids.py  pipeline.py
shared/serving/: service.py  stream.py
tests/: conftest.py  test_entropy.py  test_features.py  test_preprocessing.py
