[project]
name = "neuro-state-monitor"
version = "0.1.0"
description = "Unified EEG-based Neural State Monitor with pluggable classifiers for cognitive/emotional brain state detection"
authors = [
    {name = "Raj Navakoti", email = "rajnavakoti@gmail.com"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "mne>=1.6",
    "mne-bids>=0.14",
    "braindecode>=0.8",
    "scikit-learn>=1.4",
    "mlflow>=2.10",
    "pynwb>=2.7",
    "neurokit2>=0.2",
    "structlog>=24.1",
    "pyyaml>=6.0",
    "pandas>=2.1",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "torch>=2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "black>=24.1",
    "isort>=5.13",
    "ruff>=0.2",
    "mypy>=1.8",
]

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    {include = "shared"},
    {include = "classifiers"},
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.10"
strict = true
